# super-mario0

./: CMakeLists.txt  bodyobject.cpp  bodyobject.h  decorator.cpp  decorator.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  platform.cpp  platform.h  player.cpp  player.h  position.cpp  position.h  resource.qrc
